--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "start",
     "build": "webpack --config webpack.config.js",
-    "start": "webpack serve --open"
+    "start": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
