--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "start",
     "build": "webpack --config webpack.config.js",
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server --config webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,7 @@
     "@types/react": "^17.0.21",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.9",
+    "@types/react-transition-group": "^4.4.4",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.2.0",
     "csv-loader": "^3.0.3",
@@ -52,11 +53,14 @@
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
+    "axios": "^0.24.0",
+    "classnames": "^2.3.1",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
+    "react-transition-group": "^4.4.2",
     "redux-devtools-extension": "^2.13.9",
     "sass-resources-loader": "^2.2.4",
     "stylelint-declaration-use-variable": "^1.7.3",
