--- a/package.json
+++ b/package.json
@@ -39,10 +39,10 @@
     "sass": "^1.41.1",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
-    "stylelint": "^13.13.1",
-    "stylelint-config-standard": "^22.0.0",
-    "stylelint-order": "^4.1.0",
-    "stylelint-webpack-plugin": "^3.0.1",
+    "stylelint": "^14.2.0",
+    "stylelint-config-standard": "^24.0.0",
+    "stylelint-order": "^5.0.0",
+    "stylelint-webpack-plugin": "^2.1.1",
     "ts-loader": "^9.2.5",
     "typescript": "^4.4.3",
     "webpack": "^5.54.0",
@@ -57,13 +57,14 @@
     "classnames": "^2.3.1",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
+    "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-transition-group": "^4.4.2",
     "redux-devtools-extension": "^2.13.9",
     "sass-resources-loader": "^2.2.4",
-    "stylelint-declaration-use-variable": "^1.7.3",
-    "stylelint-scss": "^3.21.0"
+    "stylelint-declaration-use-variable": "^1.3.0",
+    "stylelint-scss": "^4.1.0"
   }
 }
