--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -2,7 +2,8 @@
   "extends": "stylelint-config-standard",
   "plugins": [
     "stylelint-order",
-    "stylelint-scss"
+    "stylelint-scss",
+    "stylelint-declaration-use-variable"
 ],
   "rules": {
     "at-rule-no-unknown": null,
@@ -17,13 +18,7 @@
     "no-eol-whitespace": null,
     "rule-empty-line-before": null,
     "block-closing-brace-empty-line-before": null,
-    "declaration-colon-space-after": null,
-    "string-quotes": null,
-    "color-function-notation": null,
-    "alpha-value-notation": null,
-    "font-family-name-quotes": null,
-    "selector-class-pattern": null
-
+    "declaration-colon-space-after": null
 
   }
 }
